--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -62,6 +62,43 @@ services:
       timeout: 10s
       retries: 10
 
+  ftp:
+    container_name: ftp
+    build:
+      context: ./requirements/bonus/ftp
+    volumes:
+      - wordpress:/var/www/html
+    env_file:
+      - /home/cpoulain/.env_inception
+    ports:
+      - "21:21"
+      - "10090-10100:10090-10100"
+    restart: always
+    networks:
+      - Inception
+
+  adminer:
+    container_name: adminer
+    build:
+      context: ./requirements/bonus/adminer
+    env_file:
+      - /home/cpoulain/.env_inception
+    ports:
+      - "8080:8080"
+    restart: always
+    networks:
+      - Inception
+
+  static_site:
+    container_name: static_site
+    build:
+      context: ./requirements/bonus/static_site
+    ports:
+      - "8081:8081"
+    restart: always
+    networks:
+      - Inception
+
 volumes:
   mariadb:
     driver: local
