Update nginx config for bonus services

--- a/srcs/requirements/nginx/tools/nginx.conf
+++ b/srcs/requirements/nginx/tools/nginx.conf
@@ -33,25 +33,39 @@ http {
 		index index.php;
 
 		# Gestion des fichiers statiques (CSS, JS, images)
-		location ~* \.(?:css|js|jpg|jpeg|gif|png|ico|woff|woff2|ttf|svg|eot)$ {
-			try_files $uri =404;
-			access_log off;
-			expires max;
-			add_header Cache-Control "public";
-		}
+                location ~* \.(?:css|js|jpg|jpeg|gif|png|ico|woff|woff2|ttf|svg|eot)$ {
+                        try_files $uri =404;
+                        access_log off;
+                        expires max;
+                        add_header Cache-Control "public";
+                }
 
 		location / {
 			try_files $uri $uri/ /index.php?$args;
 		}
 
-		location ~ \.php$ {
-			if (!-f $document_root$fastcgi_script_name) {
-				return 404;
-			}
-			try_files $uri =404;
-			include /etc/nginx/fastcgi_params;
-			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-			fastcgi_pass wordpress:9000;
-		}
-	}
+                location ~ \.php$ {
+                        if (!-f $document_root$fastcgi_script_name) {
+                                return 404;
+                        }
+                        try_files $uri =404;
+                        include /etc/nginx/fastcgi_params;
+                        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+                        fastcgi_pass wordpress:9000;
+                }
+
+                # Adminer interface
+                location /adminer/ {
+                        proxy_pass http://adminer:8080/;
+                        proxy_set_header Host $host;
+                        proxy_set_header X-Real-IP $remote_addr;
+                }
+
+                # Static site
+                location /static/ {
+                        proxy_pass http://static_site:8081/;
+                        proxy_set_header Host $host;
+                        proxy_set_header X-Real-IP $remote_addr;
+                }
+        }
 }
