--- a/srcs/requirements/nginx/tools/nginx.conf
+++ b/srcs/requirements/nginx/tools/nginx.conf
@@ -3,69 +3,69 @@ worker_processes auto;
 pid /run/nginx.pid;
 
 events {
-	worker_connections 768;
+    worker_connections 768;
 }
 
 http {
-	include mime.types;
-	default_type application/octet-stream;
+    include mime.types;
+    default_type application/octet-stream;
 
-	server {
-		listen 80;
-		server_name localhost DOMAIN_NAME.42.fr;
-		return 301 https://$host$request_uri;
-	}
+    server {
+        listen 80;
+        server_name localhost DOMAIN_NAME.42.fr;
+        return 301 https://$host$request_uri;
+    }
 
-	server {
-		listen 443 http2 ssl;
-		listen [::]:443 http2 ssl;
+    server {
+        listen 443 http2 ssl;
+        listen [::]:443 http2 ssl;
 
-		server_name DOMAIN_NAME.42.fr;
-		server_name www.DOMAIN_NAME.42.fr;
+        server_name DOMAIN_NAME.42.fr;
+        server_name www.DOMAIN_NAME.42.fr;
 
-		# SSL certificates
-		ssl_certificate /etc/nginx/ssl/nginx.crt;
-		ssl_certificate_key /etc/nginx/ssl/nginx.key;
+        # SSL certificates
+        ssl_certificate /etc/nginx/ssl/nginx.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx.key;
 
-		ssl_protocols TLSv1.3;
-		root /var/www/html;
+        ssl_protocols TLSv1.3;
+        root /var/www/html;
 
-		index index.php;
+        index index.php;
 
-		# Gestion des fichiers statiques (CSS, JS, images)
-                location ~* \.(?:css|js|jpg|jpeg|gif|png|ico|woff|woff2|ttf|svg|eot)$ {
-                        try_files $uri =404;
-                        access_log off;
-                        expires max;
-                        add_header Cache-Control "public";
-                }
-
-		location / {
-			try_files $uri $uri/ /index.php?$args;
-		}
-
-                location ~ \.php$ {
-                        if (!-f $document_root$fastcgi_script_name) {
-                                return 404;
-                        }
-                        try_files $uri =404;
-                        include /etc/nginx/fastcgi_params;
-                        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-                        fastcgi_pass wordpress:9000;
-                }
-
-                # Adminer interface
-                location /adminer/ {
-                        proxy_pass http://adminer:8080/;
-                        proxy_set_header Host $host;
-                        proxy_set_header X-Real-IP $remote_addr;
-                }
-
-                # Static site
-                location /static/ {
-                        proxy_pass http://static_site:8081/;
-                        proxy_set_header Host $host;
-                        proxy_set_header X-Real-IP $remote_addr;
-                }
+        # Gestion des fichiers statiques (CSS, JS, images)
+        location ~* \.(?:css|js|jpg|jpeg|gif|png|ico|woff|woff2|ttf|svg|eot)$ {
+            try_files $uri =404;
+            access_log off;
+            expires max;
+            add_header Cache-Control "public";
         }
+
+        location ~ \.php$ {
+            if (!-f $document_root$fastcgi_script_name) {
+                return 404;
+            }
+            try_files $uri =404;
+            include /etc/nginx/fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_pass wordpress:9000;
+        }
+
+        # Adminer interface
+        location /adminer {
+            proxy_pass http://adminer:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        # Static site
+        location /static {
+            proxy_pass http://static_site:8081;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        location / {
+            try_files $uri $uri/ /index.php?$args;
+        }
+    }
 }
