--- a/srcs/requirements/nginx/tools/nginx.conf
+++ b/srcs/requirements/nginx/tools/nginx.conf
@@ -12,7 +12,7 @@ http {
 
     server {
         listen 80;
-        server_name localhost DOMAIN_NAME.42.fr;
+        server_name localhost cpoulain.42.fr;
         return 301 https://$host$request_uri;
     }
 
@@ -20,8 +20,8 @@ http {
         listen 443 http2 ssl;
         listen [::]:443 http2 ssl;
 
-        server_name DOMAIN_NAME.42.fr;
-        server_name www.DOMAIN_NAME.42.fr;
+        server_name cpoulain.42.fr;
+        server_name www.cpoulain.42.fr;
 
         # SSL certificates
         ssl_certificate /etc/nginx/ssl/nginx.crt;
@@ -31,6 +31,24 @@ http {
         root /var/www/html;
 
         index index.php;
+
+        # Adminer interface
+        location /adminer {
+            proxy_pass http://adminer:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        location = /static {
+            return 301 /static/;
+        }
+
+        # Static site
+        location /static/ {
+            proxy_pass http://static_site:8081/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
 
         # Gestion des fichiers statiques (CSS, JS, images)
         location ~* \.(?:css|js|jpg|jpeg|gif|png|ico|woff|woff2|ttf|svg|eot)$ {
@@ -48,20 +66,6 @@ http {
             include /etc/nginx/fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_pass wordpress:9000;
-        }
-
-        # Adminer interface
-        location /adminer {
-            proxy_pass http://adminer:8080;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
-
-        # Static site
-        location /static {
-            proxy_pass http://static_site:8081;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
         }
 
         location / {
