--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -99,6 +99,21 @@ services:
     networks:
       - Inception
 
+  portainer:
+    build:
+      context: ./requirements/bonus/portainer
+    container_name: portainer
+    image: portainer
+    restart: always
+    ports:
+      - "9000:9000"
+      - "9443:9443"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer:/data
+    networks:
+      - Inception
+
 volumes:
   mariadb:
     driver: local
